cluster/core/networking/traefik/dashboard/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`traefik.${SECRET_DOMAIN}`) && PathPrefix(`/`)"
      services:
        - kind: Service
          name: traefik
          namespace: networking
          port: 9000
      middlewares:
        - name: security-header
          namespace: networking
  tls:
    secretName: "${SECRET_DOMAIN}-tls"
